# scribed

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLIPBOARD_TRANSCRIPTION.md  CONSOLIDATED_REFACTORING_PLAN.md  Design.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_SUCCESS.md  MANIFEST.in  MVP_DEMO.md  Makefile  POWER_WORDS_COMPLETE.md  PYTHON_VERSION_UPDATE.md  PYTORCH_TEST_FIX_SUMMARY.md  QUICK_START_WINDOWS.md  README.md  REAL_TIME_AUDIO_COMPLETE.md  RELEASE_STRATEGY.md  Requirements.md  TTS_FIX_SUMMARY.md  WAKE_WORD_SETUP.md  WINDOWS_INSTALL.md  WINDOWS_INSTALLER_FIXED.md  WINDOWS_INSTALL_SIMPLE.md  config.yaml.example  debug_daemon.py  demo_power_words.py  demo_wake_word.py  install-windows-simple.bat  install-windows-simple.ps1  install-windows.bat  install-windows.ps1  make.bat  mypy.ini  pyproject.toml  schedule_with_note.sh  setup.py  test_audio_recording.py  (+9 more)
.claude/: sub_agents_memory.md
.claude/agents/: audio-processing-expert.md  audio-project-planner.md  code-architecture-reviewer.md  config-deployment-specialist.md  integration-testing-expert.md  memory-manager.md  ml-transcription-specialist.md  performance-optimization-critic.md  python-async-expert.md  realtime-systems-architect.md  security-compliance-auditor.md  security-privacy-auditor.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.kiro/: kiro.md
.kiro/specs/scribed-refactor/: codebase_analysis.md  design.md  requirements.md  tasks.md
dev-tools/: README.md
dev-tools/docs/: ASYNC_QUEUE_FIX_SUMMARY.md  AUDIO_BUFFER_ACCUMULATION_FIX.md  AUDIO_PREPROCESSING_GUIDE.md  CLIPBOARD_TRANSCRIPTION.md  ENHANCED_CONFIRMATION_IMPLEMENTATION.md  MVP_DEMO.md  POWER_WORDS_CONFIRMATION_GUIDE.md  POWER_WORDS_SUMMARY.md  PYTORCH_FIX_SUMMARY.md  README.md  THREAD_EXPLOSION_FIX_SUMMARY.md  TRANSCRIPTION_THREAD_FIX.md  TTS_FIX_SUMMARY.md  VOICE_CONFIRMATION_RECURSION_FIX.md  WAKE_WORD_SETUP.md  WHISPER_INTEGRATION_COMPLETE.md  WHISPER_WAKE_WORDS.md  WINDOWS_INSTALL.md
dev-tools/tests/: README.md  demo_wake_word.py  test_audio_preprocessing.py  test_audio_queue_fix.py  test_audio_recording.py  test_clipboard_feature.py  test_confirmation_recursion_fix.py  test_duplicate_transcription_fix.py  test_gtts_standalone.py  test_integration.py  test_microphone_async_fix.py  test_power_word_confirmation.py  test_power_word_dictation_flow.py  test_real_time_audio.py  test_thread_explosion_fix.py  test_transcription_fix.py  test_tts_fallback.py  test_tts_simple.py  test_wake_word.py  test_wake_word_async_fix.py  test_whisper_wake_word.py
scripts/: package.ps1  package.py
src/scribed/: __init__.py  __main__.py  cli.py  clipboard.py  config.py  daemon.py  features.py
src/scribed/api/: __init__.py  server.py
src/scribed/audio/: __init__.py  base.py  file_source.py  file_watcher.py  microphone.py  microphone_input.py  preprocessing.py
src/scribed/core/: __init__.py  engine.py  session.py
src/scribed/output/: __init__.py  base.py  clipboard.py  console.py  file.py  handler.py  integration.py
src/scribed/power_words/: __init__.py
src/scribed/realtime/: __init__.py  transcription_service.py
src/scribed/transcription/: __init__.py  base.py  enhanced_whisper_engine.py  mock_engine.py  openai_engine.py  service.py  whisper_engine.py
src/scribed/wake_word/: __init__.py  whisper_engine.py
tests/: __init__.py  conftest.py  mocks.py  test_api.py  test_audio_sources.py  test_cli_commands.py  test_config.py  test_core_engine.py  test_core_session.py  test_daemon.py  test_enhanced_whisper_engine.py  test_file_watcher.py  test_init.py  test_integration.py  test_integration_enhanced.py  test_output.py  test_performance.py  test_reliability.py
